--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-VITE_API_URL=https://taskeena-backend.onrender.com
-# VITE_API_URL=http://localhost:8080
+# VITE_API_URL=https://taskeena-backend.onrender.com
+VITE_API_URL=http://localhost:8080
