--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-helmet-async": "^2.0.5",
     "react-hot-toast": "^2.6.0",
     "react-router-dom": "^7.9.4",
+    "react-to-print": "^3.2.0",
     "react-toastify": "^11.0.5",
     "sweetalert2": "^11.26.3",
     "tailwindcss": "^4.1.14"
